# BSUIR

./: README.md  sonar-project.properties
.github/workflows/: build.yml
LAB7_8SONAR/: Array.c  Array.cpp  Array.h  CMakeLists.txt  IO.c  IO.cpp  IO.h  LAB7.cpp  LAB7.sln  LAB7.vcxproj  LAB7.vcxproj.filters  SO.c  SO.cpp  SO.h  Sort.c  Sort.h  main.c  sonar-project.properties
LAB7_8SONAR/Debug/: LAB7.exe.recipe  LAB7.ilk  vc142.idb
LAB7_8SONAR/Debug/LAB7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LAB7.lastbuildstate  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
ОАиП/: README.md
ОАиП/LAB1/: LAB1.c  LAB1.cpp
ОАиП/LAB2/: LAB2.c
ОАиП/LAB3/: LAB3.c
ОАиП/LAB4/: LAB4.c
ОАиП/LAB5/: Array.c  Array.h  IO.h  LAB5.c
ОАиП/LAB6/: Array.cpp  IO.cpp  IO.h  LAB6.cpp  Sort.cpp  Sort.h
ОАиП/LAB7_8/: LAB7.cpp  SO.cpp  Sort.cpp
